--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -3,7 +3,7 @@
 $fa-color-cyan-primary: #0dd4c4;
 $fa-color-blue-dark: #201A30;
 $fa-color-blue-dark-2: #140B2A;
-$fa-color-blue-light: #23124f;
+$fa-color-blue-light: #31264e;
 $fa-color-gray-light: #615E67;
 $fa-color-gray-lighter: #9b9292c1;
 $fa-color-white-primary: #fff;
@@ -53,7 +53,6 @@ div#root:after {
 
 div#root {
   --dot-size: 1.8px;
-//  background: #140B2A;
 }
 
 div#root:after {
