--- a/packages/forms-web/src/pages/login/ui/styles/login.scss
+++ b/packages/forms-web/src/pages/login/ui/styles/login.scss
@@ -1,6 +1,24 @@
 .login {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
+
+  &__logo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+
+    span {
+      font-size: 40px;
+      margin-left: 8px;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+    }
+  }
 }
