--- a/packages/forms-web/src/pages/use-case/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
+++ b/packages/forms-web/src/pages/use-case/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
@@ -28,6 +28,7 @@
         padding: 7px 7px 7px 12px;
         width: 100%;
         height:35px;
+        min-height: 100px;
         max-width: 450px;
         resize: vertical;
 
