fix linter issues

--- a/packages/forms-web/src/pages/use-case/ui/containers/form-area/styles/section-area.scss
+++ b/packages/forms-web/src/pages/use-case/ui/containers/form-area/styles/section-area.scss
@@ -4,7 +4,7 @@
     color: $fa-color-white-primary;
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
 
     &__field-container {
